--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "server": "json-server --watch src/data/db.json"
   },
   "eslintConfig": {
     "extends": [
