--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "use-react-router-breadcrumbs": "^3.1.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
